# rustapi

./: .gitignore  Cargo.toml
src/: main.rs
src/commands/: generate_report.rs  mod.rs
src/config/: app.rs  database.rs
src/controllers/: invoice_controller.rs  mod.rs  test_controller.rs
src/middleware/: mod.rs  response_processor.rs  token_extractor.rs
src/migrations/: 2024_01_01_create_users_table.rs  2024_01_02_create_invoices_table.rs
src/models/: invoice.rs  invoice_response.rs  mod.rs  user.rs
src/routes/: invoice.rs  mod.rs  testendpoints.rs
src/seeders/: invoice_seeder.rs  mod.rs  user_seeder.rs
src/services/: auth_service.rs  mod.rs  token_service.rs
src/utils/: c_response.rs  mod.rs  response_code.rs  token_extractor.rs
src/utils/response/: mod.rs  response.rs  response_code.rs  response_constants.rs
