[package]
name = "rustapi"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4"  # Add this line
actix-web = "4.0"
diesel = { version = "2.0", features = ["mysql"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
chrono = "0.4"
futures = "0.3"
jsonwebtoken = "9.3"
serde_json = "1.0"
futures-util = "0.3"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }